New user sign up flow

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Truco</h1>
 <p>Play Uruguayan Truco <a href="https://es.wikipedia.org/wiki/Truco_uruguayo">Wiki</a></p>
+
+<%= link_to "Sign up", new_user_path %>
